Fixed top navbar and margin for card on mobile devices on server page.

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -2,7 +2,27 @@
 html,
 body {
 	background: #34495e;
-	width: 100%;
+	padding-top: 40px;
+}
+
+@media screen and (max-width: 768px) {
+    body { padding-top: 40px;
+    }
+    .card {
+      position: relative;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      min-width: 0;
+      word-wrap: break-word;
+      background-color: #fff;
+      background-clip: border-box;
+      border: 1px solid rgba(0, 0, 0, 0.125);
+      border-radius: 0.25rem;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
 }
 
 .line {
